--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="wrapper">
             <div class="header-line">
                 <div class="header-logo">
-                    <img src="styles/img/logo.svg" alt="">
+                    <img src="/img/logo.svg" alt="">
                 </div>
                 <ul class="nav">
                     <il><a class="nav-item" href="#">Каталог</a></il>
@@ -64,7 +64,7 @@
                             </defs>
                         </svg>
                     </a>
-                    <img src="styles/img/burg.svg" class="sandwich" alt="">
+                    <img src="/img/burg.svg" class="sandwich" alt="">
                 </a>
 
             </div>
@@ -114,8 +114,8 @@
         <div class="card__holder">
             <div class="card">
                 <div class="card__1">
-                        <div class="nums"><img src="styles/img/Group 204.svg"></div>
-                        <div class="plants"><img src="styles/img/Layer 3.png"></div>
+                        <div class="nums"><img src="/img/Group 204.svg"></div>
+                        <div class="plants"><img src="/img/Layer 3.png"></div>
                         <div class="card__info__1">
                             <div class="card__title">
                                 <h3>Fig. 1 (plant)</h3>
@@ -133,8 +133,8 @@
             </div>
             <div class="card">
                 <div class="card__2">
-                        <div class="nums"><img src="styles/img/Group 204 (1).svg"></div>
-                        <div class="plants"><img src="styles/img/Layer 2.png"></div>
+                        <div class="nums"><img src="/img/Group 204 (1).svg"></div>
+                        <div class="plants"><img src="/img/Layer 2.png"></div>
                         <div class="card__info__2">
                             <div class="card__title">
                                 <h3>Fig. 2 (flower)</h3>
@@ -151,8 +151,8 @@
             </div>
             <div class="card">
                 <div class="card__3">
-                        <div class="nums"><img src="styles/img/Group 204 (2).svg"></div>
-                        <div class="plants"><img src="styles/img/Layer 4.png"></div>
+                        <div class="nums"><img src="/img/Group 204 (2).svg"></div>
+                        <div class="plants"><img src="/img/Layer 4.png"></div>
                         <div class="card__info__3">
                             <div class="card__title">
                                 <h3>Fig. 3 (leaf)</h3>
@@ -171,8 +171,8 @@
             </div>
             <div class="card">
                 <div class="card__4">
-                        <div class="nums"><img src="styles/img/Group 204 (3).svg"></div>
-                        <div class="plants"><img src="styles/img/Layer 1 1.png"></div>
+                        <div class="nums"><img src="/img/Group 204 (3).svg"></div>
+                        <div class="plants"><img src="/img/Layer 1 1.png"></div>
                         <div class="card__info__4">
                             <div class="card__title">
                                 <h3>Fig. 4 (wood)</h3>
@@ -225,22 +225,22 @@
     <div class="new__artefacts__wrapper__big">
         <div class="new__artefacts__wrapper__small">
             <div class="black__block">
-                <div class="num__1"><img src="styles/img/42.svg"></div>
-                <div class="num__2"><img src="styles/img/2.svg"></div>
-                <div class="num__3"><img src="styles/img/3.svg"></div>
-                <div class="num__4"><img src="styles/img/4.svg"></div>
-                <div class="num__5"><img src="styles/img/5.svg"></div>
-                <div class="num__6"><img src="styles/img/6.svg"></div>
-                <div class="num__7"><img src="styles/img/7.svg"></div>
-                <div class="plant__1"><img src="styles/img/1.1.png"></div>
-                <div class="plant__2"><img src="styles/img/1.2.png"></div>
-                <div class="plant__3"><img src="styles/img/1.3.png"></div>
-                <div class="plant__4"><img src="styles/img/1.4.png"></div>
-                <div class="plant__5"><img src="styles/img/1.5.png"></div>
-                <div class="plant__6"><img src="styles/img/1.6.png"></div>
-                <div class="plant__7"><img src="styles/img/1.7.png"></div>
+                <div class="num__1"><img src="/img/42.svg"></div>
+                <div class="num__2"><img src="/img/2.svg"></div>
+                <div class="num__3"><img src="/img/3.svg"></div>
+                <div class="num__4"><img src="/img/4.svg"></div>
+                <div class="num__5"><img src="/img/5.svg"></div>
+                <div class="num__6"><img src="/img/6.svg"></div>
+                <div class="num__7"><img src="/img/7.svg"></div>
+                <div class="plant__1"><img src="/img/1.1.png"></div>
+                <div class="plant__2"><img src="/img/1.2.png"></div>
+                <div class="plant__3"><img src="/img/1.3.png"></div>
+                <div class="plant__4"><img src="/img/1.4.png"></div>
+                <div class="plant__5"><img src="/img/1.5.png"></div>
+                <div class="plant__6"><img src="/img/1.6.png"></div>
+                <div class="plant__7"><img src="/img/1.7.png"></div>
             </div>
-            <div class="small__black__block"><img src="styles/img/Frame 219.jpg"></div>
+            <div class="small__black__block"><img src="/img/Frame 219.jpg"></div>
             <div class="yellow__block">
                 <p class="yellow__block__title">Kurische Nehrung 24</p>
                 <p class="yellow__block__text">Вот вам яркий пример<br> современных тенденций -<br> начало
