--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <img src="/img/logo.svg" alt="">
                 </div>
                 <ul class="nav">
-                    <il><a class="nav-item" href="#">Каталог</a></il>
-                    <il><a class="nav-item" href="#">Галерея</a></il>
-                    <il><a class="nav-item" href="#">О лабoратории</a></il>
-                    <il><a class="nav-item" href="#">Контакты</a></il>
+                    <li><a class="nav-item" href="#">Каталог</a></li>
+                    <li><a class="nav-item" href="#">Галерея</a></li>
+                    <li><a class="nav-item" href="#">О лабoратории</a></li>
+                    <li><a class="nav-item" href="#">Контакты</a></li>
                 </ul>
                 <a class="imgs">
                     <a class="imgs search-icon" href="#">
@@ -66,125 +66,128 @@
                     </a>
                     <img src="/img/burg.svg" class="sandwich" alt="">
                 </a>
-
             </div>
-
-
-
         </div>
     </header>
     <section class="collection">
-        <ul class="title">
-            <il>
-                <h1 class="title">Крупнейшая коллекция</h1>
-            </il>
-            <il>
-                <h1 class="title">природных артефактов</h1>
-            </il>
-        </ul>
-        <ul class="text__under__collection">
-            <il>
-                <p1 class="text__under__collection">Являясь всего лишь частью общей картины, интерактивные
-                    прототипы,
-                </p1>
-            </il>
-            <il>
-                <p2 class="text__under__collection">которые представляют собой яркий пример европейского типа
-                    политической</p2>
-            </il>
-            <il>
-                <p3 class="text__under__collection">и социальной культуры.</p3>
-            </il>
-        </ul>
-
-        <div class="button__arrow">
-            <p4><a class="research" href="#">Исследовать</a></p4>
-            <a class="arrow" href="#">
-                <svg width="44" height="15" viewBox="0 0 44 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M43.7071 8.20711C44.0976 7.81658 44.0976 7.18342 43.7071 6.79289L37.3431 0.428932C36.9526 0.0384078 36.3195 0.0384078 35.9289 0.428932C35.5384 0.819457 35.5384 1.45262 35.9289 1.84315L41.5858 7.5L35.9289 13.1569C35.5384 13.5474 35.5384 14.1805 35.9289 14.5711C36.3195 14.9616 36.9526 14.9616 37.3431 14.5711L43.7071 8.20711ZM0 8.5L43 8.5V6.5L0 6.5L0 8.5Z"
-                        fill="currentColor" />
-                </svg>
-            </a>
+        <div class="collection__block">
+            <ul class="title">
+                <il>
+                    <h1 class="title">Крупнейшая коллекция</h1>
+                </il>
+                <il>
+                    <h1 class="title">природных артефактов</h1>
+                </il>
+            </ul>
+            <ul class="text__under__collection">
+                <il>
+                    <p1 class="text__under__collection">Являясь всего лишь частью общей картины, интерактивные
+                        прототипы,
+                    </p1>
+                </il>
+                <il>
+                    <p2 class="text__under__collection">которые представляют собой яркий пример европейского типа
+                        политической</p2>
+                </il>
+                <il>
+                    <p3 class="text__under__collection">и социальной культуры.</p3>
+                </il>
+            </ul>
+    
+            <div class="button__arrow">
+                <p4><a class="research" href="#">Исследовать</a></p4>
+                <a class="arrow" href="#">
+                    <svg width="44" height="15" viewBox="0 0 44 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M43.7071 8.20711C44.0976 7.81658 44.0976 7.18342 43.7071 6.79289L37.3431 0.428932C36.9526 0.0384078 36.3195 0.0384078 35.9289 0.428932C35.5384 0.819457 35.5384 1.45262 35.9289 1.84315L41.5858 7.5L35.9289 13.1569C35.5384 13.5474 35.5384 14.1805 35.9289 14.5711C36.3195 14.9616 36.9526 14.9616 37.3431 14.5711L43.7071 8.20711ZM0 8.5L43 8.5V6.5L0 6.5L0 8.5Z"
+                            fill="currentColor" />
+                    </svg>
+                </a>
+            </div>
         </div>
-
     </section>
     <div class="container">
 
         <div class="card__holder">
             <div class="card">
                 <div class="card__1">
-                        <div class="nums"><img src="/img/Group 204.svg"></div>
-                        <div class="plants"><img src="/img/Layer 3.png"></div>
-                        <div class="card__info__1">
-                            <div class="card__title">
-                                <h3>Fig. 1 (plant)</h3>
-                            </div>
-                            <div class="card__text">
-                                <p>Имеется спорная точка<br> зрения, гласящая примерно<br> следующее: активно<br> развивающиеся
+                    <div class="nums"><img src="/img/Group 204.svg"></div>
+                    <div class="plants"><img src="/img/Layer 3.png"></div>
+                    <div class="card__info__1">
+                        <div class="card__title">
+                            <h3>Fig. 1 (plant)</h3>
+                        </div>
+                        <div class="card__text">
+                            <p>Имеется спорная точка<br> зрения, гласящая примерно<br> следующее: активно<br>
+                                развивающиеся
                                 страны<br> третьего
                                 мира<br>своевременно<br>верифицированы.</p>
-                            </div>
                         </div>
-                        <div class="card__button__container__1">
-                            <a href="#"><button class="button">Подробнее</button></a>
+                        <div class="card__text__small">
+                            <p>Имеется спорная точка зрения, гласящая примерно следующее: активно
+                                развивающиеся страны третьего мира<br>своевременно верифицированы.</p>
                         </div>
+                    </div>
+                    <div class="card__button__container__1">
+                        <a href="#"><button class="button">Подробнее</button></a>
+                    </div>
                 </div>
             </div>
             <div class="card">
                 <div class="card__2">
-                        <div class="nums"><img src="/img/Group 204 (1).svg"></div>
-                        <div class="plants"><img src="/img/Layer 2.png"></div>
-                        <div class="card__info__2">
-                            <div class="card__title">
-                                <h3>Fig. 2 (flower)</h3>
-                            </div>
-                            <div class="card__text">
-                            <p>Прежде всего,<br> синтетическое<br> тестирование влечет за<br> собой процесс внедрения<br>
-                                и модернизации условий.</p>
-                            </div>
+                    <div class="nums"><img src="/img/Group 204 (1).svg"></div>
+                    <div class="plants"><img src="/img/Layer 2.png"></div>
+                    <div class="card__info__2">
+                        <div class="card__title">
+                            <h3>Fig. 2 (flower)</h3>
                         </div>
-                        <div class="card__button__container__2">
-                            <a href="#"><button class="button">Подробнее</button></a>
-                        </div> 
+                        <div class="card__text">
+                            <p>Прежде всего,<br> синтетическое<br> тестирование влечет за<br> собой процесс
+                                внедрения<br>
+                                и модернизации условий.</p>
+                        </div>
+                    </div>
+                    <div class="card__button__container__2">
+                        <a href="#"><button class="button">Подробнее</button></a>
+                    </div>
                 </div>
             </div>
             <div class="card">
                 <div class="card__3">
-                        <div class="nums"><img src="/img/Group 204 (2).svg"></div>
-                        <div class="plants"><img src="/img/Layer 4.png"></div>
-                        <div class="card__info__3">
-                            <div class="card__title">
-                                <h3>Fig. 3 (leaf)</h3>
-                            </div>
-                            <div class="card__text">
-                                <p>Лишь непосредственные<br> участники прогресса<br> неоднозначны и будут в<br> равной
+                    <div class="nums"><img src="/img/Group 204 (2).svg"></div>
+                    <div class="plants"><img src="/img/Layer 4.png"></div>
+                    <div class="card__info__3">
+                        <div class="card__title">
+                            <h3>Fig. 3 (leaf)</h3>
+                        </div>
+                        <div class="card__text">
+                            <p>Лишь непосредственные<br> участники прогресса<br> неоднозначны и будут в<br> равной
                                 степени<br>
                                 предоставлены
                                 сами себе<br> для работы.</p>
-                            </div>
                         </div>
-                        <div class="card__button__container__3">
-                            <a href="#"><button class="button">Подробнее</button></a>
-                        </div>
+                    </div>
+                    <div class="card__button__container__3">
+                        <a href="#"><button class="button">Подробнее</button></a>
+                    </div>
                 </div>
             </div>
             <div class="card">
                 <div class="card__4">
-                        <div class="nums"><img src="/img/Group 204 (3).svg"></div>
-                        <div class="plants"><img src="/img/Layer 1 1.png"></div>
-                        <div class="card__info__4">
-                            <div class="card__title">
-                                <h3>Fig. 4 (wood)</h3>
-                            </div>
-                            <div class="card__text">
-                                <p>Базовый вектор развития<br> не даёт нам иного выбора,<br> кроме определения новых<br>
+                    <div class="nums"><img src="/img/Group 204 (3).svg"></div>
+                    <div class="plants"><img src="/img/Layer 1 1.png"></div>
+                    <div class="card__info__4">
+                        <div class="card__title">
+                            <h3>Fig. 4 (wood)</h3>
+                        </div>
+                        <div class="card__text">
+                            <p>Базовый вектор развития<br> не даёт нам иного выбора,<br> кроме определения новых<br>
                                 предложений.</p>
-                            </div>
                         </div>
-                        <div class="card__button__container__4">
-                            <a href="#"><button class="button">Подробнее</button></a>
-                        </div>
+                    </div>
+                    <div class="card__button__container__4">
+                        <a href="#"><button class="button">Подробнее</button></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -331,16 +334,6 @@
             </svg>
         </a>
     </section>
-    <script>
-        function checkInput() {
-            var input = document.getElementById("email");
-            if (input.value !== "") {
-                input.classList.add("filled");
-            } else {
-                input.classList.remove("filled");
-            }
-        }
-    </script>
 </body>
 
 </html>
